# musiclib

./: .gitignore  README.md  api_key.py  bulk_utils.py  logging_utils.py  lyrics_utils.py  musiclib.py  pyproject.toml  tag_utils.py
assets/: cookies.json  cookies.txt
src/musiclib/: __main__.py  logging_utils.py  musiclib.py
src/musiclib/tag_utils/: opus.py
src/muzlib/: __main__.py  lyrics_utils.py  muzlib.py
src/muzlib/tag_utils/: mp3.py  tag_utils.py
tag_utils/: tag_utils.py
