[project]
name = "muzlib"
version = "0.2"
description = "Muzlib is a Python script that allows you to create your own music library."
readme = "README.md"
authors = [
    { name = "Yauheni Zviazdou", email = "ezvezdov22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47.0",
    "syncedlyrics>=1.0.1",
    "yt-dlp>=2025.12.8",
    "ytmusicapi>=1.11.3",
]

[project.scripts]
muzlib = "muzlib.muzlib:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
